Add row is now functional

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <body>
   <p>
     Rows
-    <button type="button" name="button" id="addRow" class="myButton" onclick="addRow()"> + </button>
-    <button type="button" name="button" id="removeRow" class="myButton" onclick="removeRow()"> -- </button>
+    <button type="button" id="addRow" class="myButton" onclick="addRow()"> + </button>
+    <button type="button" id="removeRow" class="myButton" onclick="removeRow()"> -- </button>
   </p>
   <p>
     Column
-    <button type="button" name="button" id="addCol" class="myButton" onclick="addCol()"> + </button>
-    <button type="button" name="button" id="removeCol" class="myButton" onclick="removeCol()"> -- </button>
+    <button type="button" id="addCol" class="myButton" onclick="addCol()"> + </button>
+    <button type="button" id="removeCol" class="myButton" onclick="removeCol()"> -- </button>
   </p>
   <p>
     Color
