Added solo cell color change

--- a/index.html
+++ b/index.html
@@ -29,84 +29,84 @@
 
   <table id="table">
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
     <tr>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
-      <td id="cell"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)"></td>
     </tr>
   </table>
 
