--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
 </head>
 
 <body>
+  <h1 id="title">Welcome to Cell Changer!</h1>
   <p>
     Rows
     <button type="button" id="addRow" class="myButton" onclick="addRow()"> + </button>
     <button type="button" id="removeRow" class="myButton" onclick="removeRow()"> -- </button>
-  </p>
-  <p>
+    <br>
     Column
     <button type="button" id="addCol" class="myButton" onclick="addCol()"> + </button>
     <button type="button" id="removeCol" class="myButton" onclick="removeCol()"> -- </button>
-  </p>
-  <p>
+    <br>
     Color
     <select id="colors">
       <option value="white">White</option>
-      <option value="grey">Grey</option>
       <option value="black">Black</option>
       <option value="blue">Blue</option>
-      <option value="red">Red</option>
-      <option value="yellow">Yellow</option>
+      <option value="brown">Brown</option>
+      <option value="green">Green</option>
+      <option value="grey">Grey</option>
+      <option value="light-blue">LightBlue</option>
+      <option value="olive">Olive</option>
       <option value="orange">Orange</option>
+      <option value="pink">Pink</option>
+      <option value="purple">Purple</option>
+      <option value="red">Red</option>
+      <option value="teal">Teal</option>
+      <option value="yellow">Yellow</option>
     </select>
-    <button type="button" class="myButton" onclick="getColor()"> Set New Color </button>
   </p>
 
   <table id="table">
@@ -111,6 +116,7 @@
   </table>
 
   <button type="button" id="start" class="myButton" onclick="start()"> Start </button>
+  <br>
   <button type="button" id="setAll" class="myButton" onclick="setAll()"> Color All </button>
   <button type="button" id="resetAll" class="myButton" onclick="resetAll()"> Reset </button>
   <script type="text/javascript" src="index.js"></script>
