Added Click and Hold Feature

--- a/index.html
+++ b/index.html
@@ -34,84 +34,84 @@
 
   <table id="table">
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
     <tr>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
-      <td id="cell" onclick="cellChange(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
+      <td id="cell" onclick="cellChange(this)" onmouseup="up(this)" onmousedown="down(this)" onmouseover="over(this)"></td>
     </tr>
   </table>
 
